# DreamCatalyst

./: .gitignore  README.md
nerfstudio/: README.md  setup.py
nerfstudio/3d_editing/: pyproject.toml
nerfstudio/3d_editing/dc_nerf/: dc_config.py
nerfstudio/3d_editing/dc_nerf/data/datamanagers/: dc_datamanager.py  dc_splat_datamanager.py
nerfstudio/3d_editing/dc_nerf/data/dataparsers/: dc_dataparser.py  temp_dataparser.py
nerfstudio/3d_editing/dc_nerf/engine/: dc_trainer.py
nerfstudio/3d_editing/dc_nerf/fields/: dc_nerfacto_field.py
nerfstudio/3d_editing/dc_nerf/models/: dc_nerfacto.py  dc_splatfacto.py
nerfstudio/3d_editing/dc_nerf/pipelines/: base_pipeline.py  dc_pipeline.py  refinement_pipeline.py
nerfstudio/dc/: dc.py  dc_unet.py
nerfstudio/dc/utils/: free_lunch.py  gaussian_smoothing.py
nerfstudio/scripts/: edit_face_3dgs.sh  edit_face_nerf.sh
threestudio/: README.md  requirements_all.txt  train_from_mesh.py
threestudio/configs/: add.yaml  del-ctn.yaml  edit-ctn.yaml  edit-dc.yaml  edit-n2n.yaml
threestudio/gaussiansplatting/submodules/diff-gaussian-rasterization/: setup.py
threestudio/script/: edit_dc_face.sh
threestudio/threestudio/models/guidance/: __init__.py  instructpix2pix_dc_guidance.py  instructpix2pix_guidance.py
threestudio/threestudio/systems/: GassuianEditorEdit.py
threestudio/threestudio/utils/: free_lunch.py
