[project]
name = "dc_nerf"
version = "1.0.0"

dependencies=[
		"nerfstudio==1.0.2",
		"clip @ git+https://github.com/openai/CLIP.git",
		"diffusers==0.27.2",
		"transformers==4.30.2",
		"accelerate",
		"einops",
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["scripts/colmap2nerf.py"]
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
  "duplicate-code",
  "fixme",
  "logging-fstring-interpolation",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "unnecessary-ellipsis",
]

[tool.setuptools.packages.find]
include = ["dc_nerf"]

[project.entry-points.'nerfstudio.method_configs']
dc = 'dc_nerf.dc_config:dc_method'
dc_refinement = 'dc_nerf.dc_config:refinement_method'
nerfacto = 'dc_nerf.dc_config:nerfacto_method'
dc_splat = 'dc_nerf.dc_config:dc_splat_method'
dc_splat_refinement = 'dc_nerf.dc_config:dc_splat_refinement_method'
